language/move-lang/tests/move_check/expansion/invalid_spec_schema_name.move
module 0x8675309::M {
    spec schema foo<T> {
        ensures true;
    }
}
